.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:11:28 **** Incremental Build of configuration Debug for project SYNTH_RTOS_STM32F411CEU6 ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/sound_engine.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -DARM_MATH_CM4 -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/ARM/DSP/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sound_engine.d" -MT"Core/Src/sound_engine.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sound_engine.o"
arm-none-eabi-gcc -o "SYNTH_RTOS_STM32F411CEU6.elf" @"objects.list"  -l:libarm_cortexM4lf_math.a -mcpu=cortex-m4 -T"C:\Users\kccistc\Desktop\SYNTH_RTOS_BLACKPILL\SYNTH_RTOS_STM32F411CEU6\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="SYNTH_RTOS_STM32F411CEU6.map" -Wl,--gc-sections -static -L../Middlewares/ST/ARM/DSP/Lib -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: SYNTH_RTOS_STM32F411CEU6.elf
 
arm-none-eabi-size  SYNTH_RTOS_STM32F411CEU6.elf 
arm-none-eabi-objdump -h -S SYNTH_RTOS_STM32F411CEU6.elf  > "SYNTH_RTOS_STM32F411CEU6.list"
   text	   data	    bss	    dec	    hex	filename
  64532	    676	  36572	 101780	  18d94	SYNTH_RTOS_STM32F411CEU6.elf
Finished building: default.size.stdout
 
Finished building: SYNTH_RTOS_STM32F411CEU6.list
 
17:11:30 **** Incremental Build of configuration Debug for project SYNTH_RTOS_STM32F411CEU6 ****
make -j24 all 
arm-none-eabi-size  SYNTH_RTOS_STM32F411CEU6.elf 
   text	   data	    bss	    dec	    hex	filename
  64532	    676	  36572	 101780	  18d94	SYNTH_RTOS_STM32F411CEU6.elf
Finished building: default.size.stdout
 
17:11:44 **** Incremental Build of configuration Debug for project SYNTH_RTOS_STM32F411CEU6 ****
make -j24 all 
arm-none-eabi-size  SYNTH_RTOS_STM32F411CEU6.elf 
   text	   data	    bss	    dec	    hex	filename
  64532	    676	  36572	 101780	  18d94	SYNTH_RTOS_STM32F411CEU6.elf
Finished building: default.size.stdout
 
17:13:57 **** Incremental Build of configuration Debug for project SYNTH_RTOS_STM32F411CEU6 ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/sound_engine.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -DARM_MATH_CM4 -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/ARM/DSP/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sound_engine.d" -MT"Core/Src/sound_engine.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sound_engine.o"
../Core/Src/sound_engine.c: In function 'Calc_Wave_LUT':
../Core/Src/sound_engine.c:282:24: error: expected ';' before 'printf'
  282 |         g_lpf_dirty = 1
      |                        ^
      |                        ;
  283 | 
  284 |         printf("%f %f\n", g_lpf_FC, g_lpf_Q);
      |         ~~~~~~          
make: *** [Core/Src/subdir.mk:61: Core/Src/sound_engine.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.
17:14:02 **** Incremental Build of configuration Debug for project SYNTH_RTOS_STM32F411CEU6 ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/sound_engine.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -DARM_MATH_CM4 -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/ARM/DSP/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sound_engine.d" -MT"Core/Src/sound_engine.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sound_engine.o"
arm-none-eabi-gcc -o "SYNTH_RTOS_STM32F411CEU6.elf" @"objects.list"  -l:libarm_cortexM4lf_math.a -mcpu=cortex-m4 -T"C:\Users\kccistc\Desktop\SYNTH_RTOS_BLACKPILL\SYNTH_RTOS_STM32F411CEU6\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="SYNTH_RTOS_STM32F411CEU6.map" -Wl,--gc-sections -static -L../Middlewares/ST/ARM/DSP/Lib -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: SYNTH_RTOS_STM32F411CEU6.elf
 
arm-none-eabi-size  SYNTH_RTOS_STM32F411CEU6.elf 
arm-none-eabi-objdump -h -S SYNTH_RTOS_STM32F411CEU6.elf  > "SYNTH_RTOS_STM32F411CEU6.list"
   text	   data	    bss	    dec	    hex	filename
  64532	    676	  36572	 101780	  18d94	SYNTH_RTOS_STM32F411CEU6.elf
Finished building: default.size.stdout
 
Finished building: SYNTH_RTOS_STM32F411CEU6.list
 
